<resources>
    <string name="app_name">Orcller</string>
    <string name="app_scheme">orcller</string>
    <string name="app_base_uri">android-app://com.orcller.app.orcller/http/orcller.com/app/</string>
    <string name="web_base_uri">http://orcller.com/app/</string>
    <string name="domain">https://www.orcller.com</string>
    <string name="facebook_app_id">470721986412373</string>
    <string name="facebook_invite_preview_image_path">resources/site/images/preview_fbinvite.png</string>
    <string name="facebook_invite_url">https://fb.me/548899468594624</string>
    <string name="instagram_client_id">44f7da449746424a87add98948d85bba</string>
    <string name="instagram_client_secret">786fe9d225c248bc970aa251c6fd4771</string>
    <string name="instagram_redirect_url">ig786fe9d225c248bc970aa251c6fd4771://authorize</string>
    <string name="s3_domain">https://d7far00nxgmur.cloudfront.net</string>
    <string name="host">orcller.com</string>
    <string name="host_album">album</string>
    <string name="host_coediting">coediting</string>
    <string name="host_feed">feed</string>
    <string name="host_main">main</string>
    <string name="host_member">member</string>
    <string name="host_notification">notification</string>
    <string name="host_options">options</string>
    <string name="host_relationships">relationships</string>
    <string name="host_users">users</string>
    <string name="host_web">web</string>
    <string name="path_private_polcy">/site/policy/private_policy</string>
    <string name="path_terms">/site/policy/terms</string>
    <string name="w_filter_title">Orcller - Album Collaboration</string>
    <string name="w_about">About</string>
    <string name="w_account">Account</string>
    <string name="w_accept">Accept</string>
    <string name="w_accept_ask">Accept Ask</string>
    <string name="w_accept_invite">Accept Invite</string>
    <string name="w_accept_collaboration_invite">Accept Collaboration Invite</string>
    <string name="w_add">Add</string>
    <string name="w_add_collaborators">Add Collaborators</string>
    <string name="w_add_photo">+ Add</string>
    <string name="w_albums_public_settings">Albums Public Settings</string>
    <string name="w_ask">Ask</string>
    <string name="w_ask_collaboration">Ask Collaboration</string>
    <string name="w_auto_slide">Auto Slide</string>
    <string name="w_cancel">Cancel</string>
    <string name="w_cancel_ask">Cancel Ask</string>
    <string name="w_cancel_collaboration_ask">Cancel Collaboration Ask</string>
    <string name="w_cancel_invite">Cancel Invite</string>
    <string name="w_change">Change</string>
    <string name="w_change_password">Change Password</string>
    <string name="w_change_password_ing">Change Password...</string>
    <string name="w_coation">Coation</string>
    <string name="w_collaborators">Collaborators</string>
    <string name="w_comment">Comment</string>
    <string name="w_comments">Comments</string>
    <string name="w_connected_accounts">Connected Accounts</string>
    <string name="w_current_version">Current Version</string>
    <string name="w_delete">Delete</string>
    <string name="w_dismiss">Dismiss</string>
    <string name="w_done">Done</string>
    <string name="w_edit">Edit</string>
    <string name="w_et_al">et al</string>
    <string name="w_facebook">Facebook</string>
    <string name="w_facebook_photos">Facebook Photos</string>
    <string name="w_follow">Follow</string>
    <string name="w_follow_plus">+ Follow</string>
    <string name="w_followers">Followers</string>
    <string name="w_following">Following</string>
    <string name="w_hide_all_albums">Hide all Albums</string>
    <string name="w_hide_album">Hide Album</string>
    <string name="w_heart">Heart</string>
    <string name="w_hearts">Hearts</string>
    <string name="w_importing">Importing Photos...</string>
    <string name="w_instagram">Instagram</string>
    <string name="w_instagram_photos">Instagram Photos</string>
    <string name="w_invite">Invite</string>
    <string name="w_invites">Invites</string>
    <string name="w_invite_collaboration">Invite Collaboration</string>
    <string name="w_invite_facebook">Invite Facebook Friends</string>
    <string name="w_lastest_version">Lastest Version</string>
    <string name="w_login">Login...</string>
    <string name="w_login_with_facebook">Login with Facebook</string>
    <string name="w_login_up">Log in</string>
    <string name="w_logout">Logout...</string>
    <string name="w_log_out">Log out</string>
    <string name="w_me">Me</string>
    <string name="w_new_post">New Post</string>
    <string name="w_no">No</string>
    <string name="w_no_contributors">No Contributors</string>
    <string name="w_notification_application">Application Notification</string>
    <string name="w_notification_album">Album Notification</string>
    <string name="w_notification_relationships">Relationships Notification</string>
    <string name="w_ok">Ok</string>
    <string name="w_open_to_followers">Open to Followers</string>
    <string name="w_order">Order</string>
    <string name="w_password">Password</string>
    <string name="w_people">people</string>
    <string name="w_people_involved_in"> people involved in</string>
    <string name="w_photo_gallery">Photo Gallery</string>
    <string name="w_popular">Popular</string>
    <string name="w_post">Post</string>
    <string name="w_posting">Posting</string>
    <string name="w_private_policy">Private Policy</string>
    <string name="w_requests">Requests</string>
    <string name="w_preparing">Preparing...</string>
    <string name="w_previous_comments">Previous Comments</string>
    <string name="w_private">Private</string>
    <string name="w_processing">Processing...</string>
    <string name="w_public">Public</string>
    <string name="w_public_settings">Public Settings</string>
    <string name="w_push_notification_settings">Push Notification Settings</string>
    <string name="w_report_inappropriate">Report Inappropriate</string>
    <string name="w_retry">Retry</string>
    <string name="w_save">Save</string>
    <string name="w_saving">Saving...</string>
    <string name="w_setting">Setting</string>
    <string name="w_settings">Settings</string>
    <string name="w_share_to_facebook">Share to Facebook</string>
    <string name="w_sign_up">Sign up</string>
    <string name="w_sign_up_with_email">Sign up with email</string>
    <string name="w_slide_show">Slide Show</string>
    <string name="w_star">Star</string>
    <string name="w_stars">Stars</string>
    <string name="w_terms">Terms</string>
    <string name="w_term_of_service">Term of Service</string>
    <string name="w_title_activity">Activity</string>
    <string name="w_title_add_dialog">Import photos and videos</string>
    <string name="w_title_album_page_order">Edit Page Orders</string>
    <string name="w_title_album_page_default">Set as Default Page</string>
    <string name="w_title_album_page_delete">Delete Pages</string>
    <string name="w_title_ask_collaboration">Ask Collaboration</string>
    <string name="w_title_collaborations">Collaborations</string>
    <string name="w_title_edit_album">Edit Album</string>
    <string name="w_title_edit_page">Edit Page</string>
    <string name="w_title_edit_profile">Edit Profile</string>
    <string name="w_title_find_friends">Find Friends</string>
    <string name="w_title_new_album">New Album</string>
    <string name="w_title_options">Options</string>
    <string name="w_title_profile">Profile</string>
    <string name="w_title_timeline">Orcller</string>
    <string name="w_yes">Yes</string>
    <string name="w_video">Video</string>
    <string name="w_unask">Unask</string>
    <string name="w_unheart">Unheart</string>
    <string name="w_unfollow">Unfollow</string>
    <string name="w_uninvite">Uninvite</string>
    <string name="w_unstar">Unstar</string>
    <string name="w_untitled">Untitled</string>
    <string name="w_update">Update</string>
    <string name="w_user_name">User Name</string>
    <string name="w_user_honorific"></string>
    <string name="w_version_information">Version Information</string>
    <string name="m_activity_close_message">This information may have changed.\nAre you sure you want to leave this screen?</string>
    <string name="m_has_new_version">There is a new version on the App Store.</string>
    <string name="m_hint_album_description">Say something about this album...</string>
    <string name="m_hint_album_last_page">The last page of this album.</string>
    <string name="m_hint_album_title">Enter the album title here.</string>
    <string name="m_hint_comment_input">Please enter your comment.</string>
    <string name="m_hint_current_password">Current Password</string>
    <string name="m_hint_new_password">New Password</string>
    <string name="m_hint_new_password_again">Enter the new password again</string>
    <string name="m_hint_papge_description">Say something about this page...</string>
    <string name="m_hint_profile_message">No profile message</string>
    <string name="m_hint_profile_message_me">Enter profile message</string>
    <string name="m_hint_search_friend">Search by Name or Nickname</string>
    <string name="m_hint_user_name">No nickname</string>
    <string name="m_hint_user_name_me">Enter your nickname</string>
    <string name="m_member_joininput_desc">
        By tapping to continue, you are indicating that you have read the
        <a href="orcller://web?url=https://www.orcller.com/site/policy/private_policy&amp;title=Private Policy"><b>Private Policy</b></a>
         and agree to <a href="orcller://web?url=https://www.orcller.com/site/policy/terms&amp;title=Term of service"><b>Terms of Service</b></a>.
    </string>
    <string name="m_complete_email_send">
        "It has completed the certification -mail transmission.\n\nOpen an e-mail within 24 hours , please proceed to certification."
    </string>
    <string name="m_complete_change">Change has been completed.</string>
    <string name="m_complete_report_send">The report has been received.\nThank you for your feedback.</string>
    <string name="m_confirm_album_delete">Are you sure you want to delete an album?</string>
    <string name="m_fail_album_delete">It failed to delete an album.\nPlease try again.</string>
    <string name="m_fail_change">"It failed to save changes.\nPlease try again."</string>
    <string name="m_fail_common">It failed to request.\nPlease try again.</string>
    <string name="m_fail_comment">It failed to post a comment.\nPlease try again.</string>
    <string name="m_fail_post_no_connection">No connection available. Will retry your post.</string>
    <string name="m_fail_post_an_error">An error has occurred. Will retry your post.</string>
    <string name="m_fail_save_user_picture">It failed to save the picture.\nPlease try again.</string>
    <string name="m_fail_share">It failed to share the album.\nPlease try again.</string>
    <string name="m_warn_album_permission">If you set to private,\nAlbum collaborating will be blocked.\n\nDo you want to change anyway?</string>
    <string name="m_validate_album_title_length">The album title must be a maximum of 40 characters!</string>
    <string name="m_validate_change_password_new">It is the same as the current password.</string>
    <string name="m_validate_change_password_again">Confirm password is incorrect.</string>
    <string name="m_validate_password_length">The password is required at least 6 characters and maximum 16 characters!</string>
    <string name="m_validate_profile_message_length">The profile message must be a maximum of 50 characters!</string>
    <string name="m_validate_user_name_length">The user name is required at least 6 characters and maximum 16 characters!</string>
    <string name="m_validate_user_nickname_length">The user nickname must be a maximum of 16 characters!</string>
</resources>