<?xml version="1.0" encoding="utf-8"?>
<pisces.psuikit.ext.PSLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="8dp"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.orcller.app.orcller.widget.UserPictureView
            android:id="@id/userPictureView"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp">
            <pisces.psuikit.widget.ClearableEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/m_hint_user_id"
                android:inputType="text"
                android:textColor="@color/textcolor_dark_blue"
                android:textColorHint="@color/textcolor_textview_hint"
                android:textCursorDrawable="@drawable/member_cursor"
                android:textSize="13dp"/>

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border_hairline_lightgray"/>

            <pisces.psuikit.widget.ClearableEditText
                android:id="@+id/messageEditText"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/m_hint_profile_message"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@color/textcolor_textview_hint"
                android:textCursorDrawable="@drawable/member_cursor"
                android:textSize="12dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="67dp">
        <Button
            android:id="@+id/followingButton"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/w_following"
            android:textSize="11dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/followersButton"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginLeft="8dp"
            android:text="@string/w_followers"
            android:textSize="11dp"
            android:textAllCaps="false"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/saveButton"
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/button_blue_radius3dp"
                android:text="@string/w_save"
                android:textColor="@android:color/white"
                android:textSize="10dp"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>
</pisces.psuikit.ext.PSLinearLayout>