<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="54dp"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <pisces.psuikit.widget.ClearableEditText
        android:id="@+id/idEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/transparent"
        android:cursorVisible="true"
        android:hint="@string/w_user_name"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:nextFocusDown="@+id/pwEditText"
        android:textColor="@android:color/black"
        android:textColorHint="@color/textcolor_textview_hint"
        android:textCursorDrawable="@drawable/cursor_member"
        android:textSize="14dp" />

    <View android:id="@+id/separator"
        android:background="@color/border_hairline_lightgray"
        android:layout_width = "fill_parent"
        android:layout_height="1dip"
        android:layout_gravity="center_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <pisces.psuikit.widget.ClearableEditText
            android:id="@+id/pwEditText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:hint="@string/w_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@color/textcolor_textview_hint"
            android:textCursorDrawable="@drawable/cursor_member"
            android:textSize="14dp" />

        <Button
            android:id="@+id/goButton"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/button_blue_radius3dp"
            android:text="GO"
            android:textColor="@android:color/white"
            android:textSize="10dp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_marginBottom="15dp"
        android:gravity="center|bottom"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="11dp">
            <View android:id="@+id/separator"
                android:background="@color/border_hairline_lightgray"
                android:layout_width = "fill_parent"
                android:layout_height="1dip"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/orTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="-1dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@android:color/white"
                android:textColor="@android:color/darker_gray"
                android:text="OR"
                android:textAlignment="center"
                android:textSize="10dp" />
        </FrameLayout>
        <Button
            android:id="@+id/facebookButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:drawableLeft="@drawable/icon_facebook_circle"
            android:drawablePadding="5dp"
            android:text="@string/w_login_with_facebook"
            android:textColor="@drawable/color_button_facebook"
            android:textSize="14dp" />
    </LinearLayout>
</LinearLayout>