<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/LightGrayTheme.Toolbar">
        <Button
            android:id="@+id/postButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:background="@null"
            android:enabled="false"
            android:text="@string/w_post"
            android:textAllCaps="false"
            android:textColor="@drawable/textcolor_imagepicker_select_button"
            android:textSize="17dp"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bordered_lightgray">
        <Spinner
            android:id="@+id/permissionSpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contextClickable="true"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <pisces.psuikit.ext.PSScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <pisces.psuikit.widget.ClearableEditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/background_album_title_edittext"
                    android:cursorVisible="true"
                    android:hint="@string/w_album_title_hint"
                    android:inputType="text"
                    android:nextFocusDown="@+id/descriptionEditText"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/textcolot_hint"
                    android:textCursorDrawable="@drawable/member_cursor"
                    android:textSize="14dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@android:color/white">
                    <com.orcller.app.orcller.widget.UserPictureView
                        android:id="@+id/userPictureView"
                        android:layout_width="36dp"
                        android:layout_height="36dp" />

                    <EditText
                        android:id="@+id/descriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:cursorVisible="true"
                        android:hint="@string/m_hint_album_description"
                        android:inputType="textMultiLine"
                        android:maxLines="100"
                        android:singleLine="false"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/textcolot_hint"
                        android:textCursorDrawable="@drawable/member_cursor"
                        android:textSize="13dp"/>
                </LinearLayout>

                <com.orcller.app.orcller.widget.AlbumFlipView
                    android:id="@+id/albumFlipView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.orcller.app.orcller.widget.AlbumGridView
                    android:id="@+id/albumGridView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </pisces.psuikit.ext.PSScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_borderd">
            <FrameLayout
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/icon_plus"
                    android:drawablePadding="2dp"
                    android:text="@string/w_add"
                    android:textColor="@drawable/textcolor_imagepicker_select_button"
                    android:textSize="14dp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/orderButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/icon_page_order"
                    android:drawablePadding="2dp"
                    android:text="@string/w_order"
                    android:textColor="@drawable/textcolor_imagepicker_select_button"
                    android:textSize="14dp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/defaultButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/icon_page_default"
                    android:drawablePadding="2dp"
                    android:text="@string/w_default"
                    android:textColor="@drawable/textcolor_imagepicker_select_button"
                    android:textSize="14dp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/icon_page_delete"
                    android:drawablePadding="2dp"
                    android:text="@string/w_delete"
                    android:textColor="@drawable/textcolor_imagepicker_select_button"
                    android:textSize="14dp" />
            </FrameLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>